@@ -1,5 +1,11 @@
 2012-08-26  Gabriel Dos Reis  <gdr@cs.tamu.edu>
 
+	* hyper/hthits.c (splitpage): Revert unintended change from last
+	commit.
+	* hyper/initx.c (is_it_850): Likewise.
+
+2012-08-26  Gabriel Dos Reis  <gdr@cs.tamu.edu>
+
 	* graph/Gdraws/Gfun.c (GDrawLine): Make string parameter of type
 	const char*.
 	(GDrawPushButton): Likewise.
